--- a/assets/css/pages/rooms.css
+++ b/assets/css/pages/rooms.css
@@ -4,7 +4,7 @@
         .hero-banner {
             position: relative;
             height: 90vh;
-            width: 100vw;
+            width: 100%;
             overflow: hidden;
             display: flex;
             align-items: center;
